# LetMoveMSI

./: .gitignore  Cargo.toml  README.md  letmove_msi.cna
bof/: Makefile.toml
bof/.cargo/: config.toml
bof/src/: stage.rs  vtbl.rs
docs/superpowers/plans/: 2026-07-06-letmove-msi-rustbof.md
docs/superpowers/specs/: 2026-07-06-msi-lateral-mv-rustbof-design.md
driver/src/: lib.rs
letmove_msi_ws/: Cargo.toml  LICENSE  README.md  rust-toolchain.toml
letmove_msi_ws/bof/: Cargo.toml  Makefile.toml
letmove_msi_ws/bof/src/: argv.rs  deploy.rs  lib.rs  secure.rs  vtbl.rs
letmove_msi_ws/driver/: Cargo.toml
