[package]
name = "odbcpivot"
version = "0.1.0"
edition = "2024"
authors = ["daniagungg"]
publish = false

[lib]
name = "odbcpivot"
crate-type = ["cdylib"]

[dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Memory",
    "Win32_System_IO",
    "Win32_UI_Shell",
]
